--- a/_career/2020_04_03_OPT.md
+++ b/_career/2020_04_03_OPT.md
@@ -1,7 +1,7 @@
 ---
 layout: careers 
 title: A Data Driven Apporoach to Filing out your OPT 
-date: March 31, 2020 
+date: April 4th, 2020 
 mathjax: true
 ---
 
